Pending changes in the mainline
===============================

* Support of Visual Studio 2008


Version 1.0.0 (2015-02-27)
==========================

* Configuration options


2015-02-25
==========

* Initial release