@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Support of Visual Studio 2008
+* Support of FreeBSD
 
 
 Version 1.0.0 (2015-02-27)
